@@ -1,47 +1,38 @@
 package com.example.addon.modules;
 
 import com.example.addon.Main_Addon;
-import meteordevelopment.meteorclient.events.render.Render3DEvent;
 import meteordevelopment.meteorclient.events.world.TickEvent;
 import meteordevelopment.meteorclient.settings.BoolSetting;
 import meteordevelopment.meteorclient.settings.IntSetting;
 import meteordevelopment.meteorclient.settings.Setting;
 import meteordevelopment.meteorclient.settings.SettingGroup;
 import meteordevelopment.meteorclient.systems.modules.Module;
-import meteordevelopment.meteorclient.systems.modules.player.AutoClicker;
 import meteordevelopment.meteorclient.utils.Utils;
-import meteordevelopment.meteorclient.utils.player.ChatUtils;
 import meteordevelopment.meteorclient.utils.player.FindItemResult;
 import meteordevelopment.meteorclient.utils.player.InvUtils;
-import meteordevelopment.meteorclient.utils.player.PlayerUtils;
 import meteordevelopment.meteorclient.utils.world.BlockUtils;
 import meteordevelopment.orbit.EventHandler;
+import net.minecraft.block.BlockState;
 import net.minecraft.block.Blocks;
 import net.minecraft.block.FacingBlock;
 import net.minecraft.block.PistonBlock;
 import net.minecraft.client.network.ClientPlayerInteractionManager;
 import net.minecraft.entity.Entity;
 import net.minecraft.entity.decoration.ItemFrameEntity;
-import net.minecraft.item.ItemStack;
 import net.minecraft.item.Items;
 import net.minecraft.util.Hand;
-import net.minecraft.util.hit.BlockHitResult;
-import net.minecraft.util.hit.HitResult;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.math.Box;
 import net.minecraft.util.math.Direction;
-import net.minecraft.util.math.MathHelper;
-import org.joml.Vector3d;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 
 
-
 public class ItemFrameDupe extends Module {
+    private static final ArrayList<BlockPos> blocks = new ArrayList<>();
     private final SettingGroup sgGeneral = settings.getDefaultGroup();
-
     private final Setting<Integer> distance = sgGeneral.add(new IntSetting.Builder()
         .name("distance")
         .description("The max distance to search for pistons.")
@@ -52,14 +43,12 @@ public class ItemFrameDupe extends Module {
         .max(6)
         .build()
     );
-
     private final Setting<Boolean> backOfPiston = sgGeneral.add(new BoolSetting.Builder()
         .name("back-of-piston")
         .description("Whether to place on the front or back of piston")
         .defaultValue(true)
         .build()
     );
-
     private final Setting<Integer> delay = sgGeneral.add(new IntSetting.Builder()
         .name("delay")
         .description("The delay between placements and breaking")
@@ -67,8 +56,6 @@ public class ItemFrameDupe extends Module {
         .sliderMax(10)
         .build()
     );
-
-
     private final Setting<Boolean> rotate = sgGeneral.add(new BoolSetting.Builder()
         .name("rotate")
         .description("Whether or not to rotate when placing.")
@@ -81,7 +68,6 @@ public class ItemFrameDupe extends Module {
         .defaultValue(true)
         .build()
     );
-
     private final Setting<Boolean> swapBack = sgGeneral.add(new BoolSetting.Builder()
         .name("swap-back")
         .description("Whether or not to swap back to the previous held item after placing.")
@@ -96,17 +82,29 @@ public class ItemFrameDupe extends Module {
         .sliderMax(60)
         .build()
     );
+    private final ArrayList<BlockPos> positions = new ArrayList<>();
+    private int timer;
+    private Thread placeThread = null;
+    private int breakDelaytimer;
 
     public ItemFrameDupe() {
         super(Main_Addon.CATEGORY, "ItemFrameDuper", "Automatically places item frames on pistons (or not) and performs the item frame dupe");
     }
 
-    private int timer;
-    private final ArrayList<BlockPos> positions = new ArrayList<>();
-    private static final ArrayList<BlockPos> blocks = new ArrayList<>();
-    private Thread placeThread = null;
-    private int breakDelaytimer;
+    private static List<BlockPos> getSphere(BlockPos centerPos, int radius, int height) {
+        blocks.clear();
 
+        for (int i = centerPos.getX() - radius; i < centerPos.getX() + radius; i++) {
+            for (int j = centerPos.getY() - height; j < centerPos.getY() + height; j++) {
+                for (int k = centerPos.getZ() - radius; k < centerPos.getZ() + radius; k++) {
+                    BlockPos pos = new BlockPos(i, j, k);
+                    if (centerPos.isWithinDistance(pos,radius) && !blocks.contains(pos)) blocks.add(pos);
+                }
+            }
+        }
+
+        return blocks;
+    }
 
     @Override
     public void onActivate() {
@@ -121,13 +119,12 @@ public class ItemFrameDupe extends Module {
         breakDelaytimer = 0;
     }
 
+    @SuppressWarnings("all")
     @EventHandler
     private void onTick(TickEvent.Pre event) {
         if (!Utils.canUpdate()) return;
 
         ClientPlayerInteractionManager c = mc.interactionManager;
-        assert mc.world != null;
-        assert mc.player != null;
 
         if (timer > 0) {
             timer--;
@@ -139,8 +136,8 @@ public class ItemFrameDupe extends Module {
         FindItemResult itemResult = InvUtils.findInHotbar(Items.ITEM_FRAME, Items.GLOW_ITEM_FRAME);
         if (!itemResult.found()) {
             error("No item frames found in hotbar.");
-           toggle();
-           return;
+            toggle();
+            return;
         }
 
         for (BlockPos blockPos : getSphere(mc.player.getBlockPos(), distance.get(), distance.get())) {
@@ -150,15 +147,15 @@ public class ItemFrameDupe extends Module {
         }
 
         for (BlockPos blockPos : positions) {
-            assert mc.world != null;
-            if( mc.world.getBlockState(blockPos).getBlock() == Blocks.AIR){
+            BlockState blockState = mc.world.getBlockState(blockPos);
+            if (blockState.getBlock() == Blocks.AIR || !blockState.contains(FacingBlock.FACING)) {
                 continue;
             }
-            Direction direction = mc.world.getBlockState(blockPos).get(FacingBlock.FACING);
+            Direction direction = blockState.get(FacingBlock.FACING);
             if (backOfPiston.get()) {
                 direction = direction.getOpposite();
             }
-            BlockPos placePos = getBlockPosFromDirection(direction, blockPos);
+            BlockPos placePos = blockPos.offset(direction);
             BlockUtils.place(placePos, itemResult, rotate.get(), 50, true, true, swapBack.get());
 
             if (delay.get() != 0) {
@@ -167,98 +164,58 @@ public class ItemFrameDupe extends Module {
         }
 
         placeThread = new Thread(() -> {
-            if(mc.player.getMainHandStack().getItem()==Items.ITEM_FRAME){
+            if (mc.player.getWorld() == null || mc.player.getMainHandStack().getItem() == Items.ITEM_FRAME) {
                 return;
             }
-                ItemFrameEntity itemFrame;
-                Box box;
-                box = new Box(mc.player.getEyePos().add(-3, -3, -3), mc.player.getEyePos().add(3, 3, 3));
-                if (!mc.player.getWorld().getEntitiesByClass(ItemFrameEntity.class, box, itemFrameEntity -> true).isEmpty()) {
-                    itemFrame = mc.player.getWorld().getEntitiesByClass(ItemFrameEntity.class, box, itemFrameEntity -> true).get(0);
+            Box box = new Box(mc.player.getEyePos().add(-3, -3, -3), mc.player.getEyePos().add(3, 3, 3));
+            if (!mc.player.getWorld().getEntitiesByClass(ItemFrameEntity.class, box, itemFrameEntity -> true).isEmpty()) {
+                ItemFrameEntity itemFrame = mc.player.getWorld().getEntitiesByClass(ItemFrameEntity.class, box, itemFrameEntity -> true).getFirst();
 
-                    assert c != null;
-                    c.interactEntity(mc.player, itemFrame, Hand.MAIN_HAND);
-                      if (itemFrame.getHeldItemStack().getCount() > 0) {
-                        // Rotate the frame
-                          if(rotateItem.get()) {
-                              c.interactEntity(mc.player, itemFrame, Hand.MAIN_HAND);
-                          }
-                        // Delay before attacking the entity
-                        try {
-                            TimeUnit.MILLISECONDS.sleep(600);
-                        } catch (InterruptedException e) {
-                            e.printStackTrace();
-                        }
-
-                          breakDelaytimer++;
-                          if (breakDelaytimer > breakDelay.get()) {
-                              c.attackEntity(mc.player, itemFrame);
-                              //Utils.leftClick();
-                              breakDelaytimer = 0;
-                          }
-                        try {
-                            TimeUnit.MILLISECONDS.sleep(100);
-                        } catch (InterruptedException e) {
-                            e.printStackTrace();
-                        }
+                c.interactEntity(mc.player, itemFrame, Hand.MAIN_HAND);
+                if (itemFrame.getHeldItemStack().getCount() > 0) {
+                    // Rotate the frame
+                    if (rotateItem.get()) {
+                        c.interactEntity(mc.player, itemFrame, Hand.MAIN_HAND);
                     }
+                    // Delay before attacking the entity
+                    try {
+                        TimeUnit.MILLISECONDS.sleep(600);
+                    } catch (InterruptedException e) {
+                        e.printStackTrace();
+                    }
+
+                    breakDelaytimer++;
+                    if (breakDelaytimer > breakDelay.get()) {
+                        c.attackEntity(mc.player, itemFrame);
+                        //Utils.leftClick();
+                        breakDelaytimer = 0;
+                    }
+                    try {
+                        TimeUnit.MILLISECONDS.sleep(100);
+                    } catch (InterruptedException e) {
+                        e.printStackTrace();
+                    }
+                }
             }
         });
         placeThread.setName("PB-Thread");
         placeThread.start();
     }
 
-
     private boolean shouldPlace(BlockPos pistonPos) {
         Direction direction = mc.world.getBlockState(pistonPos).get(FacingBlock.FACING);
         if (backOfPiston.get()) {
             direction = direction.getOpposite();
         }
-        BlockPos iFramePos = getBlockPosFromDirection(direction, pistonPos);
+        BlockPos iFramePos = pistonPos.offset(direction);
 
         for (Entity entity : mc.world.getEntities()) {
-            if (entity instanceof ItemFrameEntity) {
-                BlockPos entityPos = new BlockPos((int) Math.floor(entity.getPos().x), (int) Math.floor(entity.getPos().y), (int) Math.floor(entity.getPos().z));
-                if (iFramePos.equals(entityPos)) {
+            if (entity instanceof ItemFrameEntity itemFrame) {
+                if (iFramePos.equals(itemFrame.getBlockPos())) {
                     return false;
                 }
             }
         }
-
         return true;
-    }
-
-    private static List<BlockPos> getSphere(BlockPos centerPos, int radius, int height) {
-        blocks.clear();
-
-        for (int i = centerPos.getX() - radius; i < centerPos.getX() + radius; i++) {
-            for (int j = centerPos.getY() - height; j < centerPos.getY() + height; j++) {
-                for (int k = centerPos.getZ() - radius; k < centerPos.getZ() + radius; k++) {
-                    BlockPos pos = new BlockPos(i, j, k);
-                    if (distanceBetween(centerPos, pos) <= radius && !blocks.contains(pos)) blocks.add(pos);
-                }
-            }
-        }
-
-        return blocks;
-    }
-
-    private static double distanceBetween(BlockPos pos1, BlockPos pos2) {
-        double d = pos1.getX() - pos2.getX();
-        double e = pos1.getY() - pos2.getY();
-        double f = pos1.getZ() - pos2.getZ();
-        return MathHelper.sqrt((float) (d * d + e * e + f * f));
-    }
-
-    private BlockPos getBlockPosFromDirection(Direction direction, BlockPos originalPos) {
-        return switch (direction) {
-            case UP -> originalPos.up();
-            case DOWN -> originalPos.down();
-            case EAST -> originalPos.east();
-            case WEST -> originalPos.west();
-            case NORTH -> originalPos.north();
-            case SOUTH -> originalPos.south();
-            default -> originalPos;
-        };
     }
 }
